fix(about-modal): align copyright and legal text color with design

--- a/packages/cloud-cognitive/src/components/AboutModal/_about-modal.scss
+++ b/packages/cloud-cognitive/src/components/AboutModal/_about-modal.scss
@@ -80,7 +80,7 @@
   .#{$block-class} .#{$block-class}__copyright-text {
     margin-top: $spacing-07;
     margin-bottom: 0;
-    color: $text-03;
+    color: $text-02;
   }
 
   .#{$block-class} .#{$block-class}__copyright-text {
